--- a/starship.toml
+++ b/starship.toml
@@ -14,17 +14,17 @@ $directory\
 $git_branch\
 $git_status\
 [\ue0b0](fg:#FCA17D bg:#33658A)\
-[ \uf64f](bg:#33658A fg:#FFFFFF)\
+[ \uf017](bg:#33658A fg:#FFFFFF)\
 $time\
 [\ue0b4](fg:#33658A)
 [\\$](fg:#909090) 
 """
 
 command_timeout = 500
- 
+
 # Disable the blank line at the start of the prompt
 # add_newline = true
- 
+
 # You can also replace your username with a neat symbol like  to save some space
 [username]
 show_always = true
@@ -37,7 +37,7 @@ style = "fg:#000000 bg:#DA627D"
 format = "[ $path ]($style)"
 truncation_length = 3
 truncation_symbol = "…/"
- 
+
 # Here is how you can shorten some long paths by text replacement
 # similar to mapped_locations in Oh My Posh:
 [directory.substitutions]
