--- a/mise/mise.toml
+++ b/mise/mise.toml
@@ -1,8 +1,11 @@
-[settings]
-trusted_config_paths = [
-    '~/dev',
-]
-
 [tools]
 jq = "1.8.1"
 node = "24.6.0"
+
+[settings]
+# All config files on these prefixes will be trusted
+trusted_config_paths = [
+    '~/dev',
+]
+# Enable only for node that has been tested on all platforms
+idiomatic_version_file_enable_tools = ['node']
