--- a/mise/config.toml
+++ b/mise/config.toml
@@ -1,9 +1,9 @@
 [tools]
 jq = "1.8.1"
-node = "25.5.0"
+node = "25.6.0"
 ruby = "4.0.1"
 gh = "2.86.0"
-python = '3.14.2'
+python = "3.14.3"
 
 [settings]
 # All config files on these prefixes will be trusted
